[ENHANCEMENT] enhancements to deploy on aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-aws.access_key_id=AKIAIDHI3QUZWQJB5F3A
-aws.secret_access_key=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
+aws.access_key_id=accesskey
+aws.secret_access_key=secretkey
 s3.bucket=s3cloudvideo
 s3.bucket.output=s3cloudvideo-output
 s3.region=ap-south-1
