--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-aws.access_key_id=accesskey
-aws.secret_access_key=secretkey
+aws.access_key_id=access-key
+aws.secret_access_key=secret-key
 s3.bucket=s3cloudvideo
 s3.bucket.output=s3cloudvideo-output
 s3.region=ap-south-1
 s3.uploadfile=C:\\eula.1028.txt
 s3.key=eula.1028.txt
 aws.transcoder.pipeline.id=1512855123033-fqrd7d
+spring.http.multipart.max-file-size=10000MB
+spring.http.multipart.max-request-size=10000MB
+sqs.url=https://sqs.ap-south-1.amazonaws.com/150988712577/my-queue
